# PiTS3

./: .gitignore  CITATION.cff  LICENSE  README.md  TODO.md  TS_pipe.py  TS_pipe.xyz  fragments_combiner.ipynb  main.py  pyproject.toml  setup.py
TS_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
notebooks/: data_check_greenfield_imines.ipynb  data_check_nbds.ipynb  data_check_nbds_error_check.ipynb
src/: DEADJOE  TS_pipe.py  data_check_adaes.ipynb  data_check_imines.ipynb  data_check_nbds.ipynb  data_check_stilbenes.ipynb  data_collecor.py  data_collector.py  fragments_combiner.ipynb  fragments_combiner.py
templates/: TS.yaml  TS_neb.yaml  TS_reopt.yaml  TS_reopt_irc.yaml  orca.inp  orca_three_points.inp  orca_three_points_BS_SP_last.inp  orca_three_points_noBS.inp
test/: test.sh  test1.cdxml  test2_frag1.cdxml  test2_frag2.cdxml
test/test1_cdxml-to-xyz/: test1.cdxml  test1_cdxml-to-xyz.sh
test/test2_fragments-combiner_tspipe_noorca/: test2_fragments-combiner_tspipe_noorca.sh
test/test3_fragments-combiner_tspipe_orca/: frag1.cdxml  frag2.cdxml  test3_fragments-combiner_tspipe_orca.sh
tests/rdkit_fragment_search/: C18H11F6NO2S2.mol2  C18H11F6NO2S2.xyz  C18H11F6NOS.mol2  C18H11F6NOS.xyz  C18H11F6NS2.mol2  C18H11F6NS2.xyz  C18H11F6NS2_1.mol2  C18H11F6NS2_1.xyz  C19H12F6N2S2.mol2  C19H12F6N2S2.xyz  C20H13F6NS2.mol2  C20H13F6NS2.xyz  C20H13F6NS2_1.mol2  C20H13F6NS2_1.xyz  C21H11F6NO2S2.mol2  C21H11F6NO2S2.xyz  fragment_search_tests_and_debug.py
tests/rdkit_fragments/: C14H10N2.xyz  C14H13NO.xyz  C15H12N2.xyz  C15H15NO.xyz  test_set_1.cdxml  test_set_2.cdxml
tests/rdkit_fragments/diphenylimines/: first_subst_imines.cdxml  second_subst.cdxml
tests/rdkit_fragments/norbornadienes/: nbd_core.cdxml  nbd_subst.cdxml
tests/rdkit_fragments/stilbenes/: first_subst_stilbenes.cdxml
tests/rdkit_pyrazole/: pyrazole_fragments.py
tests/rdkit_xyz_to_mol/: rdkit_xyz_to_mol.ipynb  rdkit_xyz_to_mol.py
tools/: TS_pipeq  Williams.py  angle_checker.py  imine_checker.py  stilbene_checker.py  ts_checker.py
ts_pipeline/: cli.py  config.py
ts_pipeline/core/: data_collector.py  ts_pipeline.py
ts_pipeline/templates/: TS.yaml  TS_10_nodes.yaml  TS_neb.yaml  TS_reopt.yaml  TS_reopt_irc.yaml  orca.inp  orca_BS_SP.inp  orca_SP.inp  orca_three_points.inp  orca_three_points_BS_SP_last.inp  orca_three_points_noBS.inp  orca_three_points_no_BS_SP_last.inp
ts_pipeline/utils/: cdxml_to_xyz.py  fragments_combiner.py
(+31 files in other folders)
